# rt

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
src/: canvas.cpp  canvas.hpp  color.cpp  color.hpp  intersection.cpp  intersection.hpp  matrix.cpp  matrix.hpp  ray.cpp  ray.hpp  rt.cpp  sample.hpp  sphere.cpp  sphere.hpp  transformations.cpp  tuple.cpp  tuple.hpp
src/canvas/: camera.cpp  camera.hpp  canvas.cpp  color.cpp  color.hpp  world.cpp  world.hpp
src/intersections/: intersection.cpp  intersection.hpp  ray.cpp  ray.hpp
src/lights/: material.cpp  material.hpp  point_light.cpp  point_light.hpp
src/patterns/: checker.cpp  checker.hpp  gradient.cpp  gradient.hpp  pattern.cpp  pattern.hpp  ring.cpp  ring.hpp  stripe_pattern.cpp  stripe_pattern.hpp  test_pattern.cpp  test_pattern.hpp
src/primitives/: matrix.cpp  matrix.hpp  matrix4.cpp  matrix4.hpp  transformations.cpp  tuple.cpp  tuple.hpp
src/shapes/: bounds.cpp  bounds.hpp  cone.cpp  cone.hpp  cube.cpp  cube.hpp  cylinder.cpp  cylinder.hpp  group.cpp  group.hpp  plane.cpp  plane.hpp  shape.cpp  shape.hpp  smooth_triangle.cpp  smooth_triangle.hpp  sphere.cpp  sphere.hpp  test_shape.cpp  test_shape.hpp  triangle.cpp  triangle.hpp
src/util/: approx.cpp  approx.hpp  randgen.hpp  (+1 more)
test/: canvas.cpp  color.cpp  sample.cpp  test.cpp
tests/: bounds.cpp  canvas.cpp  color.cpp  cone.cpp  cube.cpp  cylinder.cpp  group.cpp  lighting.cpp  mat4.cpp  matrix.cpp  obj.cpp  patterns.cpp  ray.cpp  reflection.cpp  scene.cpp  shape.cpp  smooth_triangle.cpp  transformations.cpp  triangle.cpp  tuple.cpp
